added a setting to control the focus mode of the home page

--- a/src/tracks.ui
+++ b/src/tracks.ui
@@ -18,7 +18,16 @@
     <property name="spacing">
      <number>0</number>
     </property>
-    <property name="margin">
+    <property name="leftMargin">
+     <number>0</number>
+    </property>
+    <property name="topMargin">
+     <number>6</number>
+    </property>
+    <property name="rightMargin">
+     <number>0</number>
+    </property>
+    <property name="bottomMargin">
      <number>0</number>
     </property>
     <item>
@@ -70,7 +79,7 @@
                  <x>0</x>
                  <y>0</y>
                  <width>780</width>
-                 <height>574</height>
+                 <height>568</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="verticalLayout_4">
@@ -149,8 +158,8 @@ QWidget#widget_2 {background-color:palette(window);}</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>100</width>
-             <height>30</height>
+             <width>790</width>
+             <height>568</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="starred_mainpane_layout">
@@ -229,8 +238,8 @@ QWidget#starred_sidepane {background-color:palette(window);}</string>
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>100</width>
-                 <height>30</height>
+                 <width>780</width>
+                 <height>568</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="projects_mainpane_layout">
@@ -436,8 +445,8 @@ QWidget#widget {background-color:palette(window);}</string>
                 <rect>
                  <x>0</x>
                  <y>0</y>
-                 <width>100</width>
-                 <height>30</height>
+                 <width>780</width>
+                 <height>568</height>
                 </rect>
                </property>
                <layout class="QVBoxLayout" name="contexts_mainpane_layout">
@@ -614,8 +623,8 @@ QWidget#widget_7 {background-color:palette(window);}</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>100</width>
-             <height>30</height>
+             <width>780</width>
+             <height>568</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="verticalLayout_3">
@@ -678,8 +687,8 @@ QWidget#widget_4 {background-color:palette(window);}</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>100</width>
-             <height>30</height>
+             <width>780</width>
+             <height>568</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="tickler_mainpane_layout">
@@ -739,8 +748,8 @@ QWidget#tickler_sidepane {background-color:palette(window);}</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>100</width>
-             <height>30</height>
+             <width>800</width>
+             <height>568</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="done_mainpane_layout">
@@ -777,8 +786,8 @@ QWidget#tickler_sidepane {background-color:palette(window);}</string>
             <rect>
              <x>0</x>
              <y>0</y>
-             <width>100</width>
-             <height>30</height>
+             <width>800</width>
+             <height>568</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="statslayout">
@@ -833,6 +842,13 @@ QWidget#tickler_sidepane {background-color:palette(window);}</string>
          </layout>
         </item>
         <item>
+         <widget class="QCheckBox" name="settingsHomeFocusMode">
+          <property name="text">
+           <string>Enable home page single focus mode</string>
+          </property>
+         </widget>
+        </item>
+        <item>
          <spacer name="verticalSpacer">
           <property name="orientation">
            <enum>Qt::Vertical</enum>
@@ -872,7 +888,7 @@ QWidget#tickler_sidepane {background-color:palette(window);}</string>
              <x>0</x>
              <y>0</y>
              <width>800</width>
-             <height>574</height>
+             <height>568</height>
             </rect>
            </property>
            <layout class="QVBoxLayout" name="search_mainpane_layout">
